# stackdrift

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  TESTING.md  github-repo-best-practices.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  stale.yml
docs/plans/: 2026-02-25-data-models-design.md  2026-02-25-data-models.md  2026-02-25-stackdrift-architecture.md  2026-02-25-stackdrift-implementation.md
src/stackdrift/: __init__.py  analyzer.py  cli.py  detector.py  formatter.py  models.py
src/stackdrift/aws/: client.py
src/stackdrift/integrations/: github.py  slack.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_client.py  test_detector.py  test_formatter.py  test_integrations.py  test_models.py
